examples/neg/main_effect.effekt
effect Eff(): Unit

def main() = do Eff()